stable/application-mesh/tests/golden/defaults/defaults.values.yaml
global:
  application:
    product: leads-broker
    environment: test
    version: "0.1.0"
