stable/application-mesh/tests/golden/defaults/defaults.golden.yaml
---
# Source: application-mesh/templates/certificate.yaml
apiVersion: cert-manager.io/v1
kind: Certificate
metadata:
  name: example-com
  namespace: istio-ingress
  labels:
    app.kubernetes.io/part-of: leads-broker
    app.kubernetes.io/version: "0.1.0"
spec:
  dnsNames:
    - "example.com"
  issuerRef:
    name: letsencrypt-production
    kind: ClusterIssuer
  secretName: example-com-tls
---
# Source: application-mesh/templates/destination-rule.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: leads-broker-webserver
  labels:
    app.kubernetes.io/part-of: leads-broker
    app.kubernetes.io/version: "0.1.0"
spec:
  host: leads-broker-webserver.app-component-test00000.svc.cluster.local
  trafficPolicy:
    loadBalancer:
      simple: LEAST_REQUEST
  subsets:
    - name: all-versions # Route traffic to all pods regardless of the deployed version. Current deployment model.
      labels:
        app.kubernetes.io/instance: leads-broker-webserver
    - name: current-version # Should be used for proper blue-green deployment procedures
      labels:
        app.kubernetes.io/instance: leads-broker-webserver
        app.kubernetes.io/version: "0.1.0"
---
# Source: application-mesh/templates/gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: example-com
  annotations:
    # Do not create dns records for this resource
    external-dns.alpha.kubernetes.io/controller: "ignored-resource"
  labels:
    app.kubernetes.io/part-of: leads-broker
    app.kubernetes.io/version: "0.1.0"
spec:
  selector:
    istio: ingress-public-gateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "example.com"
      tls:
        httpsRedirect: true
    - port:
        number: 443
        name: https
        protocol: HTTPS
      hosts:
        - "example.com"
      tls:
        mode: SIMPLE
        credentialName: istio-ingress/example-com-tls
---
# Source: application-mesh/templates/virtual-service.gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: leads-broker-1aa0045a
  annotations:
    external-dns.alpha.kubernetes.io/hostname: "example.com"
    external-dns.alpha.kubernetes.io/ttl: "60"
  labels:
    app.kubernetes.io/part-of: leads-broker
    app.kubernetes.io/version: "0.1.0"
spec:
  hosts:
    - "example.com"
  gateways:
    - app-component-test00000/example-com
  http:
    - name: deny-ingress-spec
      match:
        - uri:
            prefix: /admin
        - uri:
            prefix: /internal_api
        - uri:
            prefix: /etc
      directResponse:
        status: 403
        body:
          string: Access Denied
    - name: allow-ingress-spec
      match:
        - uri:
            prefix: /api
        - uri:
            prefix: /upload
      route:
        - destination:
            host: "leads-broker-webserver.app-component-test00000.svc.cluster.local"
            subset: all-versions
          
    - name: deny-everything-except-allowed
      directResponse:
        status: 403
        body:
          string: Access Denied
---
# Source: application-mesh/templates/virtual-service.mesh.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: leads-broker-webserver
  labels:
    app.kubernetes.io/part-of: leads-broker
    app.kubernetes.io/version: "0.1.0"
spec:
  hosts:
    - "leads-broker-webserver.app-component-test00000.svc.cluster.local"
  gateways:
    - mesh
  http:
    - name: allow-all-locations
      route:
        - destination:
            host: "leads-broker-webserver.app-component-test00000.svc.cluster.local"
            subset: all-versions
